# cktext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  text.cpp  text.h  var.hpp
